fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -55,8 +55,8 @@ i {
     left: 0px;
     width: 100%;
     content: '';
-    height: 4px;
-    bottom: -10px;
+    height: 2px;
+    bottom: -15px;
     background: var(--accent);
 }
 
@@ -116,10 +116,10 @@ h2 {
 }
 
 h3 {
-    font-size: 1.6rem;
-    font-weight: 500;
+    font-size: 1.4rem;
+    font-weight: 600;
     font-style: normal;
-    line-height: 1.5em;
+    line-height: 1rem;
     margin: 0px 0px 0px 0px;
     color: rgb(175, 142, 84);
 }
@@ -259,8 +259,7 @@ header {
 
 .pageSubTitle {
     text-align: center;
-    color: var(--accent);
-    color: rgb(212, 168, 35);
+    color: var(--accent2);
     font-size: 1.1rem;
     font-weight: 500;
     letter-spacing: .06em;
@@ -324,7 +323,7 @@ header {
     z-index: 1;
     grid-column: 1/-1;
     grid-row: 1/-1;
-    opacity: .4;
+    opacity: .6;
 }
 
 .container {
@@ -351,6 +350,10 @@ header {
     padding: 20px 5% 20px 10px;
     min-width: 250px;
     max-width: 600px;
+}
+
+.cell1 p {
+    margin-top: 2.25rem;
 }
 
 .dropcap1::first-letter {
@@ -496,7 +499,7 @@ header {
 }
 
 .central-image h3 {
-    padding-bottom: 10px;
+    -padding-bottom: 10px;
     text-align: left;
     margin-left: 0%;
 }
@@ -750,7 +753,7 @@ footer ul li {
     }
     .pageSubTitle {
         text-align: center;
-        color: var(--accent);
+        color: var(--accent2);
         font-weight: 300;
         font-size: 1rem;
     }
@@ -873,7 +876,6 @@ footer ul li {
         margin-top: 30px;
     }
     .central-image h3 {
-        padding-bottom: 10px;
         text-align: left;
         margin-left: 0%;
         align-self: flex-start;
